hopefully fixed responsive spacing on projects carousel for the last time

--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,10 @@ body a:hover {
 }
 
 .projects-container h2 {
-  padding-left: 170px;
+  max-width: 75%;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .projects-carousel {
@@ -161,7 +164,7 @@ body a:hover {
 }
 
 .project-caption {
-  padding-top: 200px;
+  padding-top: 180px;
 }
 
 .project-caption h5 {
@@ -294,6 +297,20 @@ body a:hover {
   .projects-carousel {
     max-width: 80%;
   }
+
+  .projects-container h2 {
+    max-width: 75%;
+  }
+
+  #nutripal {
+    margin-bottom: -25px;
+  }
+}
+
+@media screen and (max-width: 1198px) {
+  #nutripal {
+    padding-bottom: 50px;
+  }
 }
 
 @media screen and (max-width: 1120px) {
@@ -315,9 +332,9 @@ body a:hover {
 }
 
 @media screen and (max-width: 906px) {
-  #nutripal {
+  /* #nutripal {
     padding-bottom: 25px;
-  }
+  } */
 }
 
 @media screen and (max-width: 869px) {
@@ -344,7 +361,7 @@ body a:hover {
   }
 
   #nutripal {
-    padding-bottom: 45px;
+    padding-bottom: 75px;
   }
 }
 
@@ -414,62 +431,68 @@ body a:hover {
     padding-left: 0px;
   }
 
-  .project-caption {
+  /* .project-caption {
     padding-top: 200px;
-  }
+  } */
 }
 
-@media screen and (max-width: 750px) {
-  #forbes {
-    padding-bottom: 25px;
+@media screen and (max-width: 728px) {
+  .youtube-embed {
+    padding-bottom: 50px;
   }
 }
 
 @media screen and (max-width: 702px) {
-  #nutripal {
+  /* #nutripal {
     padding-bottom: 49px;
-  }
+  } */
 
   .projects-carousel {
     max-width: 85%;
   }
 }
 
-@media screen and (max-width: 634px) {
-  .youtube-embed {
-    padding-bottom: 25px;
-  }
-}
-
-@media screen and (max-width: 609px) {
+@media screen and (max-width: 670px) {
   #forbes {
     padding-bottom: 50px;
   }
 }
 
-/* 599 is where youtube embed breaks */
-
-@media screen and (max-width: 587px) {
-  #nutripal {
-    padding-bottom: 75px;
-  }
-}
-
-@media screen and (max-width: 541px) {
-  .youtube-embed {
-    padding-bottom: 50px;
-  }
-}
-
-@media screen and (max-width: 513px) {
+@media screen and (max-width: 627px) {
   #nutripal {
     padding-bottom: 100px;
   }
 }
 
-@media screen and (max-width: 507px) {
+@media screen and (max-width: 609px) {
+  /* #forbes {
+    padding-bottom: 50px;
+  } */
+}
+
+/* 599 is where youtube embed breaks */
+
+@media screen and (max-width: 587px) {
+  /* #nutripal {
+    padding-bottom: 75px;
+  } */
+}
+
+@media screen and (max-width: 568px) {
+  .youtube-embed {
+    padding-bottom: 75px;
+  }
+}
+
+@media screen and (max-width: 546px) {
   #forbes {
     padding-bottom: 75px;
+  }
+}
+
+@media screen and (max-width: 526px) {
+  #nutripal {
+    padding-bottom: 125px;
   }
 }
 
@@ -504,62 +527,74 @@ body a:hover {
   }
 }
 
-@media screen and (max-width: 494px) {
+@media screen and (max-width: 486px) {
+  .youtube-embed {
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  #nutripal {
+    padding-bottom: 150px;
+  }
+}
+
+@media screen and (max-width: 456px) {
   #forbes {
     padding-bottom: 100px;
   }
 }
 
-@media screen and (max-width: 464px) {
-  .youtube-embed {
-    padding-bottom: 75px;
+@media screen and (max-width: 444px) {
+  #forbes {
+    padding-bottom: 125px;
   }
 }
 
 @media screen and (max-width: 433px) {
-  #forbes {
+  /* #forbes {
     padding-bottom: 120px;
-  }
+  } */
 }
 
-@media screen and (max-width: 432px) {
-  #nutripal {
-    padding-bottom: 120px;
-  }
-}
-
-@media screen and (max-width: 406px) {
-  #nutripal {
-    padding-bottom: 145px;
-  }
-}
-
-@media screen and (max-width: 399px) {
-  .youtube-embed {
-    padding-bottom: 100px;
-  }
-}
-
-@media screen and (max-width: 386px) {
-  #forbes {
-    padding-bottom: 145px;
-  }
-}
-
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 418px) {
   .youtube-embed {
     padding-bottom: 125px;
   }
 }
 
-@media screen and (max-width: 366px) {
-  #nutripal {
-    padding-bottom: 170px;
+@media screen and (max-width: 406px) {
+  /* #nutripal {
+    padding-bottom: 145px;
+  } */
+}
+
+@media screen and (max-width: 399px) {
+  /* .youtube-embed {
+    padding-bottom: 100px;
+  } */
+}
+
+@media screen and (max-width: 390px) {
+  #forbes {
+    padding-bottom: 150px;
   }
 }
 
-@media screen and (max-width: 365px) {
+@media screen and (max-width: 389px) {
   #nutripal {
-    padding-bottom: 195px;
+    padding-bottom: 175px;
+  }
+}
+
+@media screen and (max-width: 367px) {
+  #nutripal {
+    padding-bottom: 200px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .youtube-embed {
+    padding-bottom: 150px;
   }
 }
